--- a/test/wally.toml
+++ b/test/wally.toml
@@ -1,5 +1,5 @@
 [package]
-name = "orazi/robloxtragedy"
+name = "test"
 version = "0.1.0"
 registry = "https://github.com/UpliftGames/wally-index"
 realm = "shared"
