--- a/test/wally.toml
+++ b/test/wally.toml
@@ -5,4 +5,4 @@ registry = "https://github.com/UpliftGames/wally-index"
 realm = "shared"
 
 [dependencies]
-analytics-service = "khanpython/analytics-service@0.0.1"
+analytics-service = "khanpython/analytics-service@^0.0.1"
