--- a/wally.toml
+++ b/wally.toml
@@ -1,12 +1,13 @@
 [package]
 name = "khanpython/analytics-service"
 description = "A Promise-based Analytics Service Wrapper for Roblox."
-version = "0.0.2"
+version = "0.0.3"
 license = "MIT"
 authors = ["khanpython (https://github.com/KhanPython)"]
 registry = "https://github.com/upliftgames/wally-index"
 realm = "shared"
-exclude = [".vscode", "test"]
+include = ["src", "src/**", "wally.toml", "wally.lock", "build.project.json", "LICENSE", "README.md"]
+
 
 [dependencies]
 promise = "evaera/promise@4.0.0"
